# Finance-Flow

./: LICENSE  README.md
src/: index.html
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
